--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "framer-motion": "^3.2.1",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
