--- a/package.json
+++ b/package.json
@@ -1,8 +1,44 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "knwch-portfolio",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A developer portfolio website of Korrawich Khosripetch.",
   "version": "0.1.0",
+  "author": "Korrawich Khosripetch <korrawich.kho@gmail.com>",
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@icons-pack/react-simple-icons": "^4.4.0",
+    "@material-ui/core": "^4.11.4",
+    "dayjs": "^1.10.5",
+    "framer-motion": "^4.1.17",
+    "gatsby": "^3.8.0",
+    "gatsby-plugin-gatsby-cloud": "^2.8.1",
+    "gatsby-plugin-image": "^1.8.0",
+    "gatsby-plugin-manifest": "^3.8.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-offline": "^4.8.0",
+    "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-sass": "^4.8.0",
+    "gatsby-plugin-sharp": "^3.8.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-source-filesystem": "^3.8.0",
+    "gatsby-transformer-sharp": "^3.8.0",
+    "lottie-web": "^5.7.11",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.35.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.3.1"
+  },
+  "keywords": [
+    "gatsby"
+  ],
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
@@ -11,22 +47,12 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "framer-motion": "^3.2.1",
-    "gatsby": "^2.26.1",
-    "gatsby-plugin-material-ui": "^2.1.10",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
-  },
-  "devDependencies": {
-    "prettier": "2.2.1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b main"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
