--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,30 +3,35 @@
     "title": "Facial Expression Recognition",
     "describe": "The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested",
     "stack": ["Tensorflow", "Opencv", "Plotly"],
-    "url": ""
+    "git": "",
+    "demo": ""
   },
   {
     "title": "Skill Guider",
     "describe": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s",
     "stack": ["Nestjs", "Angular", "Mongodb"],
-    "url": "https://github.com/knwch/skillguider"
+    "git": "https://github.com/knwch/skillguider",
+    "demo": "https://skill-guider.herokuapp.com"
   },
   {
     "title": "Search Content",
     "describe": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout",
     "stack": ["Flask", "Angular", "Firebase"],
-    "url": "https://github.com/knwch/search-content"
+    "git": "https://github.com/knwch/search-content",
+    "demo": ""
   },
   {
     "title": "PAKU",
     "describe": "There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour",
     "stack": ["NodeDotJs", "Semanticuireact", "Redux", "Googlemaps"],
-    "url": "https://github.com/knwch/PAKU"
+    "git": "https://github.com/knwch/PAKU",
+    "demo": "https://paku-cef3a.web.app"
   },
   {
     "title": "Goods Application",
     "describe": "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC",
     "stack": ["NodeDotJs", "ReactJs", "Redux", "Mapbox"],
-    "url": "https://github.com/knwch/Goods-App"
+    "git": "https://github.com/knwch/Goods-App",
+    "demo": ""
   }
 ]
