--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@icons-pack/react-simple-icons": "^4.4.0",
     "@material-ui/core": "^4.11.4",
+    "animejs": "^3.2.1",
     "dayjs": "^1.10.5",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.8.1",
