--- a/package.json
+++ b/package.json
@@ -8,9 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@icons-pack/react-simple-icons": "^4.6.1",
+    "@mui/material": "^5.2.8",
+    "@mui/styles": "^5.2.3",
+    "animejs": "^3.2.1",
+    "dayjs": "^1.10.7",
+    "framer-motion": "^5.6.0",
+    "lottie-web": "^5.8.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.48.0"
   },
   "devDependencies": {
     "@types/node": "17.0.2",
