--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scroll": "^1.8.4",
     "sass": "^1.48.0"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.4",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
+    "@types/react-scroll": "^1.8.3",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4"
