--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.48.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.16.7",
     "@types/animejs": "^3.1.4",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
