--- a/package.json
+++ b/package.json
@@ -9,33 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@icons-pack/react-simple-icons": "^4.6.1",
-    "@mui/material": "^5.2.8",
-    "@mui/styles": "^5.2.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.3.0",
+    "@mantine/hooks": "^5.3.0",
+    "@mantine/next": "^5.3.0",
+    "@tabler/icons": "^1.95.1",
     "animejs": "^3.2.1",
-    "dayjs": "^1.10.7",
-    "framer-motion": "^5.6.0",
-    "lottie-web": "^5.8.1",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scroll": "^1.8.4",
-    "sass": "^1.48.0"
+    "framer-motion": "^7.3.2",
+    "next": "^12.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-do-expressions": "^7.16.7",
-    "@types/animejs": "^3.1.4",
-    "@types/node": "17.0.2",
-    "@types/react": "17.0.37",
-    "@types/react-scroll": "^1.8.3",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
-    "typescript": "4.5.4"
+    "@babel/plugin-proposal-do-expressions": "^7.18.6",
+    "@types/animejs": "^3.1.5",
+    "@types/node": "^18.7.16",
+    "@types/react": "^18.0.19",
+    "eslint": "^8.23.1",
+    "eslint-config-next": "^12.3.0",
+    "typescript": "^4.8.3"
   }
 }
