--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "^5.3.0",
-    "@mantine/hooks": "^5.3.0",
-    "@mantine/next": "^5.3.0",
-    "@tabler/icons": "^1.95.1",
+    "@mantine/core": "^5.10.2",
+    "@mantine/hooks": "^5.10.2",
+    "@mantine/next": "^5.10.2",
+    "@tabler/icons-react": "^2.1.2",
     "animejs": "^3.2.1",
-    "framer-motion": "^7.3.2",
-    "next": "^12.3.0",
+    "framer-motion": "7.10.3",
+    "next": "12.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5"
   },
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.18.6",
-    "@types/animejs": "^3.1.5",
-    "@types/node": "^18.7.16",
-    "@types/react": "^18.0.19",
-    "eslint": "^8.23.1",
-    "eslint-config-next": "^12.3.0",
-    "typescript": "^4.8.3"
+    "@types/animejs": "^3.1.7",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "12.3.4",
+    "typescript": "^4.9.5"
   }
 }
