--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "^5.10.2",
-    "@mantine/hooks": "^5.10.2",
-    "@mantine/next": "^5.10.2",
-    "@tabler/icons-react": "^2.1.2",
+    "@mantine/core": "5.10.5",
+    "@mantine/hooks": "5.10.5",
+    "@mantine/next": "5.10.5",
+    "@tabler/icons-react": "^2.11.0",
     "animejs": "^3.2.1",
     "framer-motion": "7.10.3",
     "next": "12.3.4",
@@ -25,9 +25,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.18.6",
     "@types/animejs": "^3.1.7",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "eslint": "^8.33.0",
+    "@types/node": "^18.15.10",
+    "@types/react": "^18.0.30",
+    "eslint": "^8.36.0",
     "eslint-config-next": "12.3.4",
     "typescript": "^4.9.5"
   }
