--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "0xkktee.github.io",
+  "name": "0xktee.github.io",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/server": "^11.10.0",
-    "@mantine/core": "5.10.5",
-    "@mantine/hooks": "5.10.5",
-    "@mantine/next": "5.10.5",
-    "@tabler/icons-react": "^2.11.0",
-    "animejs": "^3.2.1",
-    "framer-motion": "7.10.3",
-    "next": "12.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.3.5"
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.462.0",
+    "next": "14.2.18",
+    "next-themes": "^0.4.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-do-expressions": "^7.18.6",
-    "@types/animejs": "^3.1.7",
-    "@types/node": "^18.15.10",
-    "@types/react": "^18.0.30",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "12.3.4",
-    "typescript": "^4.9.5"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.18",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "postcss": "^8",
+    "prettier": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
