--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v1
         with:
-          node-version: '18.x'
+          node-version: "20.x"
 
       - name: Installing packages
         run: npm i
 
       - name: Build App
-        run: npm run build && npm run export && touch ./out/.nojekyll
+        run: npm run build && touch ./out/.nojekyll
         env:
           CFWA_TOKEN: ${{ secrets.CFWA_TOKEN }}
 
